--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,80 @@ section{
     grid-column: 1 / 4;
 }
 
+/* TEMPLATE IMÓVEL */
+.pagina_imovel h1{
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 50px;
+}
+
+.pagina_imovel__conteudo{
+    display: flex;
+    margin: 10%;
+    gap: 5%;
+    align-items: center;
+}
+
+.pagina_imovel img{
+    width: 100%;
+    border-radius: 5px;
+    min-width: 300px;
+}
+
+.pagina_imovel__texto .preco{
+    color: var(--primario);
+    font-weight: 600;
+    font-size: 30px;
+}
+
+.pagina_imovel__formulario{
+        min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 600px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 100px 10px 10px 10px;
+    box-shadow: -3px 3px 10px #eee;
+}
+
+.formulario_contato{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    align-items: center;
+}
+
+.formulario_contato label{
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.formulario_contato input{
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    border-radius: 100px;
+    border: 1px solid var(--primario_auxiliar2);
+    outline: 0;
+    margin-bottom: 20px;
+}
+
+.botao_envio{
+    background: var(--primario);
+    color: var(--claro);
+    border: 0 !important;
+    width: 200px !important;
+    justify-self: center;
+}
+
+.formulario_contato_para_imovel{
+    display: grid;
+    justify-content: center;
+}
+
 @media (max-width: 1200px) {
     .rodape{
         height: auto;
@@ -227,6 +301,18 @@ section{
     .contate_nos, .siga_nos{
         text-align: center;
     }
+
+    .pagina_imovel__conteudo{
+        flex-direction: column;
+    }
+
+    .pagina_imovel__texto{
+        max-width: 500px;
+    }
+
+    .pagina_imovel__texto .preco{
+        text-align: center;
+    }
 }
 
 @media (max-width: 1000px) {
@@ -235,5 +321,11 @@ section{
         grid-template-rows: repeat(auto);
         gap: 25px;
         padding-bottom: 50px;
+    }
+}
+
+@media (max-width: 650px) {
+    .pagina_imovel__formulario{
+        width: 300px;
     }
 }
