--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,30 @@ section{
     margin: 10px;
 }
 
-/* MAPA */
+
+/* LOCALIZAÇÃO E MAPA */
+
+.localizacao{
+    background: var(--primario);
+    color: var(--claro);
+    display: grid;
+    grid-template-columns: 45% 45%;
+    grid-template-rows: 100px auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.localizacao .titulo_secao{
+    text-align: start;
+    margin: 10px;
+}
+
+.localizacao .conteudo_texto{
+    text-align: end;
+}
 
 .mapa{
+    grid-column: 1 / 3;
     height: 500px;
     width: 100%;
 }
